--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "deploy": "gh-pages -d dist",
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "r":"node pract.js"
   },
   "browserslist": [
     "last 2 versions",
